[package]
name = "hyper-http-server-v3"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "0.14", features = ["server", "http1"], default-features = false }
reqwest = { version = "0.11", features = ["json"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"